# investiq-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
environment/: investiq_env.py
graders/: grader1_allocation.py  grader2_stocks.py  grader3_portfolio.py
pyproject.toml/: pyproject.toml
server/: app.py
services/: allocation.py  risk_calculator.py
utils/: data_fetcher.py  feature_engine.py  stock_universe.py
