[project]
name = "investiq-openenv"
version = "1.0.0"
description = "Indian stock market portfolio management RL environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "yfinance",
    "pandas",
    "numpy",
    "python-dotenv",
    "openai",
    "requests",
    "groq",
    "scikit-learn",
    "openenv-core>=0.2.0"    # <-- ADDED THIS
]

[project.urls]
Homepage = "https://huggingface.co/spaces/shivdahake5/investiq-env"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# <-- ADDED THIS WHOLE SECTION -->
[project.scripts]
[project.scripts]
server = "server.app:main"